# solitaire-solver

./: Cargo.toml
src/: cribbage.rs  dfs.rs  fortune.rs  game.rs  main.rs  minimax.rs  russian.rs  states.rs
