[package]
name = "solitaire-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
mctser = "0.1.2"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
strum = { version = "0.26.3", features = ["derive"] }
ordered-float = "4.2.1"
peak_alloc = "0.2.1"
derivative = "2.2.0"
